--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,16 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.4.23",
         "barryvdh/laravel-ide-helper": "~2.3",
         "barryvdh/laravel-debugbar": "~2.3",
         "doctrine/dbal": "~2.5",
         "graham-campbell/exceptions": "~9.3",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "folklore/graphql": "~1.0",
+        "cebe/markdown": "~1.1",
+        "lord/laroute": "~2.4"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
